# RAG

./: .gitignore  README.md  alembic.ini  config.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 094f828cd99d_create_documents.py  11a0301f37a5_messages_table.py  1e3eeffd3d3f_create_users_and_documnet_tables.py  419932b125b7_update_model_name.py  8458bb6e57cf_add_user_fk_to_document_table.py  8ebd71cd8b13_create_tables.py  afcfb492a7ef_create_tables.py  ec36ecbb67d2_update_messages_and_create_chats_table.py
backend/: api.py  chat.py  embedding_model.py  ingest.py  load.py  models.py  prompts.py  router.py  utils.py
backend/account/: dependencies.py  models.py  repositories.py  router.py  schemas.py  services.py
backend/auth/: router.py  services.py
backend/core/: config.py  db.py  exceptions.py  logger.py  models.py  schemas.py
