[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.6",
    "langchain-huggingface>=0.3.0",
    "langchain-pinecone>=0.2.8",
    "langchainhub>=0.1.21",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.0.0",
]
